[fix] Change broken styles

--- a/SophosApp/src/components/Error/styles.module.css
+++ b/SophosApp/src/components/Error/styles.module.css
@@ -1,4 +1,6 @@
 .container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
